--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build",
+    "docs:build": "bash -xe contents/marp/scripts/main.sh && vitepress build",
     "docs:preview": "vitepress preview"
   },
   "dependencies": {
